priority aware scheduler option, realtime scheduler observation, payment ticker on server(removed from api call), cleaner code, some bug fixes about fronted worker calls
